tests/negative/regression/r10.orng
fn main () -> ()
    let a = []2
    a